--- a/crypto_clusters.ipynb
+++ b/crypto_clusters.ipynb
@@ -1099,7 +1099,7 @@
     "plt.xticks(range(1,11))\n",
     "plt.xlabel('Number of clusters')\n",
     "plt.ylabel('Inertia')\n",
-    "plt.title('Elbow curve for customer data')\n",
+    "plt.title('Elbow curve for Cryptocurrency Data')\n",
     "plt.show()"
    ]
   },
